knowledge quest page spacing  fix
Former-commit-id: 0e722a4a5f46ff24b7e0c32ae92962970d1e80bb [formerly 1ede0f3d1f4321fe9f4860d91c57676ce7d6aa57]
Former-commit-id: 5e85b28a32df52288f857ade1fc1a7f65723cda6

--- a/src/styles/knowledgeQuest/quest.module.scss
+++ b/src/styles/knowledgeQuest/quest.module.scss
@@ -34,7 +34,7 @@
 }
 
 // smaller tabs landscape mode
-@media only screen and (orientation: landscape) and (max-height: 820px) {
+@media only screen and (orientation: landscape) and (max-height: 820px) and (max-width: 1180px) {
   .questPage {
     .contentWrapper {
       .mainContent {
